@@ -1,3 +1,6 @@
+2003-07-21  Tim Waugh  <twaugh@redhat.com>
+	* src/RelLib.py: Made Person.probablyAlive() smarter.
+
 2003-07-20  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/plugins/ReadGedcom.py: handle sources attached to a person (not
 	to an event), handle the PAF/FTW _MARNM extension.
